# roaring_crab

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-15-roaring-crab.md
docs/superpowers/specs/: 2026-05-15-roaring-crab-design.md
examples/: audition.rs
hooks/: hooks.json
src/: audio_sink.rs  config.rs  effects.rs  hook_event.rs  lib.rs  lockfile.rs  logging.rs  mixer.rs  protocol.rs  socket_path.rs  spawn.rs
src/patches/: alert.rs  ambient.rs  lifecycle.rs  mod.rs
tests/: client_to_daemon.rs  concurrent_events.rs  config_io.rs  hook_event_parsing.rs  lazy_spawn.rs  lockfile.rs  logging.rs  mixer_concurrency.rs  patches_render.rs  protocol_roundtrip.rs
