[package]
name = "roaring-crab"
version = "0.1.0"
edition = "2021"
description = "Claude Code plugin that plays generated analog-modeling synth sounds on hook events"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "roaring-crab"
path = "src/bin/roaring-crab.rs"

[[bin]]
name = "roaring-crabd"
path = "src/bin/roaring-crabd.rs"

[features]
default = []
# Used in tests/CI to swap real cpal output for an in-memory ring buffer.
null-audio = []

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
toml = "0.8"
rand = "0.8"
directories = "5"
cpal = "0.15"
errno = "0.3"
interprocess = "2"
parking_lot = "0.12"
anyhow = "1"
thiserror = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
] }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
